feat: create a method to convert JSONArray to stream (#807)
* feat: create a method to convert JSONArray to stream

* feat: review